# pata-nahi-kia-masla-tha

./: README.md
studies/: README.md  pyproject.toml  socialStudiesProjects.py  students.db
